--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=Todo-api
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/todoapp?serverTimezone=UTC&useSSL=false
+# spring.datasource.url=jdbc:mysql://localhost:3306/todoapp?serverTimezone=UTC&useSSL=false
+# ici on le lance avec le container mysql-db pas localhost
+spring.datasource.url=jdbc:mysql://mysql-db:3306/todo_db?serverTimezone=UTC&useSSL=false 
+
 spring.datasource.username=todoapp
 spring.datasource.password=todoapp
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 
